@startuml
'https://plantuml.com/class-diagram
title PublishingCompany Aggregate DDD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

top to bottom direction

package "PERSISTENCE" {

    package "MEM" {

        class MemoPublishingCompanyRepo <<Repo>> {
        - publishingCompanyExists(publishingCompanyId : PublishingCompanyId) : boolean
        }

    }
}

package "DOMAIN" {

package "REPOSITORY" {

    interface IPublishingCompanyRepo <<Interface>> {
    + registerPublishingCompany(publishingCompanyName : String) : PublishingCompany
    }

}

package "VALUE OBJECT" {

    class PublishingCompanyId <<Value Object>> #LightPink {
    - _id : String
    +equals(object : Object) : boolean
    +toString() : String
    }

}

package "PUBLISHING COMPANY" #b0c4d4 {

    class PublishingCompany <<Root>> <<Entity>> {
      + identity() : PublishingCompanyId
      + isSamePublishingCompany(publishingCompanyId : PublishingCompanyId) : boolean
    }

    class PublishingCompanyFactory <<Factory>> {
    + createPublishingCompany(publishingCompanyName : String) : PublishingCompany
    + createPublishingCompany(publishingCompanyId : PublishingCompanyId) : PublishingCompany

    }

}

}


MemoPublishingCompanyRepo ..|> IPublishingCompanyRepo
MemoPublishingCompanyRepo "1" --> "1" PublishingCompanyFactory : invokes

MemoPublishingCompanyRepo "1" --> "*" PublishingCompany : persists

PublishingCompany "1" --> "1" PublishingCompanyId: has

PublishingCompanyFactory "1" ..> "*" PublishingCompany: <<create>>

@enduml